Pankaj | #2107 | View button size in patient search in registration needs to be corrected or make the text center aligned

--- a/ui/app/styles/bahmni-components/_splitButton.scss
+++ b/ui/app/styles/bahmni-components/_splitButton.scss
@@ -57,7 +57,7 @@
 
 
 .reg-search-wrapper .split-button li{
-    width:7.5em;
+    width:auto;
 }
 
 
@@ -88,12 +88,14 @@
         position: relative;
         ul {
             width: 100px;
+            float:none;
+            margin: 0 auto;
             li.secondaryOption button {
                 border: 0;
                 border-radius: 0;
             }
             li button {
-                text-align: left;
+                text-align: center;
             }
         }
         .toggle-button {
